[project]
name = "multi-agent-networking"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.5",
    "langgraph-api>=0.2.3",
    "langgraph-sdk>=0.1.61",
    "langgraph-supervisor>=0.0.21",
    "mcp>=1.9.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
